# nous

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  release.ps1  vite.config.ts
src/: App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/data/: ege2027.ts  subjects.ts
src/lib/: ai.ts  api.ts  confetti.ts  demo.ts  md.ts  models.ts  providers.ts  schedule.ts  sound.ts  stats.ts  update.ts
src/screens/: Chat.tsx  Home.tsx  LessonDetail.tsx  Onboarding.tsx  PlanExtender.tsx  PlanImporter.tsx  PlanScreen.tsx  ProgressScreen.tsx  Settings.tsx
src/ui/: Celebrations.tsx  Layout.tsx  Modal.tsx
